# flick

./: .gitignore  .gitmodules
client/flickers/: .gitignore  Cargo.toml  Makefile  flake.nix
client/flickers/app/: auth.rs  main.rs
client/flywer/: README.md  index.html  package-lock.json  package.json  postcss.config.mjs  rollup.config.js  tsconfig.json  vite.config.js
client/flywer/app/: index.tsx
client/flywer/app/data/: Constants.ts  Store.ts
client/flywer/app/data/api/: Api.ts
client/flywer/app/data/auth/: Auth.ts
client/flywer/app/ui/: App.module.less  App.tsx  routes.tsx
client/flywer/app/ui/NavBar/: NavBar.module.less  NavBar.tsx
client/flywer/app/ui/pages/Login/: Login.module.less  Login.tsx
client/flywer/app/ui/pages/Registration/: Registration.module.less  Registration.tsx
client/flywer/app/ui/utils/: Icon.tsx  bindToRef.ts  requestNotificationWrapper.ts
client/flywer/app/ui/widgets/NavBar/: NavBar.module.less  NavBar.tsx
client/flywer/app/ui/widgets/Notifications/: Notifications.module.less  Notifications.tsx
client/shared/css/: root.less  theme.less
server/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  shell.nix
server/api-test/: create_post.sh  list_posts.sh  login_user.sh  register_user.sh
server/config/: localhost.crt  localhost.key  nginx.conf
server/containers/: dev.Dockerfile
server/migrations/: 000001_all_tables.down.sql  000001_all_tables.up.sql
server/scripts/: gen_localhost_cert.sh
server/src/: auth.cpp  cache.cpp  cache_basic.cpp  controller_create_post.cpp  controller_hello_world.cpp  controller_interface.cpp  controller_list_posts.cpp  controller_login_user.cpp  controller_refresh_tokens.cpp  controller_register_user.cpp  crypto.cpp  db.cpp  db_pg.cpp  defer.hpp  exceptions.cpp  fcgi_server.cpp  flick.cpp  flick.hpp  get_env.cpp  http.cpp  http_router.cpp  logger.cpp  logger_macro.hpp  printer.cpp  routes.cpp  server.cpp  service_add_user.cpp  service_create_post.cpp  service_interface.cpp  service_list_posts.cpp  service_login_user.cpp  service_refresh_tokens.cpp  ttime.cpp  utils.cpp  validate.cpp  vars.cpp
